added rec + trending unit tests